exercices/mailhog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  labels:
    app: mailhog
spec:
  type: NodePort
  ports:
  - name: smtp
    port: 1025
    protocol: TCP
    targetPort: 1025
  - name: webadm
    port: 8025
    protocol: TCP
    targetPort: 8025
  selector:
    app: mailhog
