exercices/mailhog/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailhog
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mailhog
          servicePort: 8025
